--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Timuriagudin.github.io/todo-app",
+  "homepage": "https://Timuriagudin.github.io/ToDo-app",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
